--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy-pyra": "ng build --prod && rm -rf docs/ && mv dist/subscribe/ docs && rm -rf dist/"
   },
   "private": true,
   "dependencies": {
